Release Notes - Versão 1.0 - 10/07/2015