@@ -7,4 +7,3 @@
     </modules>
   </component>
 </project>
-
