@@ -1,1 +1,24 @@
-Lista de Funcionalidades - Versão 1.0 - 10/07/2015
+=======================================================================
+
+[Projeto UFPI Maps] Lista de Funcionalidades - Versão 1.0 - 10/07/2015
+
+- Mapa normal
+- Mapa satélite
+- Mapa híbrido
+- Traçar rotas entre geopoints do banco de dados interno
+- Auto-completar buscando no banco de dados interno
+- Comunicação com o serviço Firebase (Web Service)
+- Sobre
+
+[Projeto UFPI Maps] Futuras Funcionalidades  - Versão 1.0 - 10/07/2015
+
+- Feedback funcional
+- Possibilidade de listar todas as âncoras de um tipo
+- Traçar rotas à partir e para o ponto atual do usuário
+- Criação dos geofences dos centros
+- Atualização do banco de dados
+- Criação de web service proprietário
+- Pesquisa sobre determinado ponto específico
+- Criação de cartões contendo as informações de cada geopoint
+
+=======================================================================
